fix: missing background on algorithm switch warning

--- a/src/app/simulation/grid-settings/grid-settings.component.scss
+++ b/src/app/simulation/grid-settings/grid-settings.component.scss
@@ -99,6 +99,7 @@ body.theme-dark :host .warning-message {
     transition-timing-function: cubic-bezier(0.22, 1, 0.36, 1);
     transition-property: display opacity;
     transition-behavior: allow-discrete;
+    will-change: opacity, transform;
 }
 
 .switch-warning.is-active {
